# orbitalx.sim

./: .gitignore  CMakeLists.txt
config/: course_polyline.txt  sim_params.conf
docker/: Dockerfile  docker-compose.yml
docs/: codex.md
src/app/: ConfigLoader.cpp  ConfigLoader.h  Run.cpp  Run.h  main.cpp
src/core/Sensor/: BatterySensor.cpp  BatterySensor.h  Encoder.cpp  Encoder.h  LineSensor.cpp  LineSensor.h
src/core/common/: Types.h
src/core/course/: Course.cpp  Course.h
src/core/cpu/: Cpu.cpp  Cpu.h
src/core/io/: WsClient.cpp  WsClient.h
src/core/plant/battery/: Battery.cpp  Battery.h
src/core/plant/motor/: Motor.cpp  Motor.h
web/: Dockerfile  package.json  server.js
web/public/: index.html  main.js  styles.css
